<resources>
    <string name="app_name">Yoda</string>
    <string name="play_eoq">Eoq</string>
    <string name="play_solado_maluco">solado maluco</string>
    <string name="play_e_nois_maluco">e nois maluco</string>
    <string name="play_sehloiro">sehloiro</string>
    <string name="play_lagoaquilagoai">lagoaquilagoai</string>
    <string name="play_circo_de_soled">circo de soled</string>
    <string name="play_opa_fion">opa fion</string>
    <string name="play_hiiiiiii">HIIIIIII</string>
    <string name="play_pra_deus_ver">Pra deus ver</string>
    <string name="play_trabson">Trabson</string>
    <string name="play_fon">Fon</string>
    <string name="play_queeeee">QUEEEEE</string>
</resources>
