<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabriellacerda.yodaproject.MainActivity"
    android:background="@drawable/yoda__banner">

    <Button
        android:id="@+id/play_eoq"
        android:layout_width="155dp"
        android:layout_height="62dp"
        android:text="@string/play_eoq"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_solado_maluco"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/play_solado_maluco"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_solado_maluco"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_e_nois_maluco"
        app:layout_constraintRight_toRightOf="@+id/play_eoq"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="22dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_eoq" />
    <Button
        android:id="@+id/play_e_nois_maluco"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_e_nois_maluco"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_sehloiro"
        app:layout_constraintRight_toRightOf="@+id/play_solado_maluco"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="13dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_solado_maluco" />
    <Button
        android:id="@+id/play_sehloiro"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_sehloiro"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_lagoaquilagoai"
        app:layout_constraintRight_toRightOf="@+id/play_e_nois_maluco"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_e_nois_maluco" />
    <Button
        android:id="@+id/play_lagoaquilagoai"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/play_lagoaquilagoai"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/play_queeeee"
        app:layout_constraintRight_toRightOf="@+id/play_sehloiro"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/play_sehloiro"
        app:layout_constraintTop_toTopOf="@+id/play_queeeee" />

    <Button
        android:id="@+id/play_circo_de_soled"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="18dp"
        android:text="@string/play_circo_de_soled"
        app:layout_constraintBottom_toTopOf="@+id/play_opa_fion"
        app:layout_constraintLeft_toRightOf="@+id/play_fon"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
    <Button
        android:id="@+id/play_opa_fion"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_opa_fion"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_hiiiiiii"
        app:layout_constraintRight_toRightOf="@+id/play_circo_de_soled"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_circo_de_soled" />
    <Button
        android:id="@+id/play_hiiiiiii"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_hiiiiiii"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_pra_deus_ver"
        app:layout_constraintRight_toRightOf="@+id/play_opa_fion"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="22dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_opa_fion" />
    <Button
        android:id="@+id/play_pra_deus_ver"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_pra_deus_ver"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_trabson"
        app:layout_constraintRight_toRightOf="@+id/play_hiiiiiii"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="13dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_hiiiiiii" />
    <Button
        android:id="@+id/play_trabson"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_trabson"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/play_queeeee"
        app:layout_constraintRight_toRightOf="@+id/play_pra_deus_ver"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_pra_deus_ver" />
    <Button
        android:id="@+id/play_fon"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_fon"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/play_eoq"
        app:layout_constraintBaseline_toBaselineOf="@+id/play_circo_de_soled"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/play_eoq" />
    <Button
        android:id="@+id/play_queeeee"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/play_queeeee"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/play_trabson"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/play_trabson" />
</android.support.constraint.ConstraintLayout>
